--- a/hm.tex
+++ b/hm.tex
@@ -1238,10 +1238,17 @@ This principle, introduced by Hamilton in 1834, suggests that a mechanical syste
 
     \begin{example}[Double pendulum]\label{ex:2pendulum}
       A double pendulum consists of two point particles of masses $m_1$ and $m_2$, connected by massless rods of lengths $l_1$ and $l_2$. The first pendulum is attached to the ceiling by a fixed pivot while the second one is attached to the point particle of the first pendulum.
-
+      \warpprintonly{
       \InsertBoxR{0}{
         \includegraphics[width=0.3\textwidth]{images/HM-1-12.pdf}
       }%
+      }
+      \warpHTMLonly{
+      \begin{figure}[htbp]
+        \centering
+        \includegraphics[width=0.3\textwidth]{images/HM-1-12.pdf}
+      \end{figure}
+      }
       Denote $x_1$ and $x_2$ the angles that each of the pendulums make with respect to the corresponding vertical, oriented counterclockwise: a value of $0$ means that the pendulum is vertical with the mass lying below the pivot.
 
       The lagrangian $L_1 = T_1 - U_1$ of the first particle is the same as for a simple pendulum:
