--- a/hm.tex
+++ b/hm.tex
@@ -144,7 +144,7 @@ makeindex
 \thispagestyle{empty}
 \null\vfill
 \begin{center}
-  Version 1.20 alpha\\
+  Version 1.20 $\alpha$2\\
   \today
 \end{center}
 \begin{warpprint}
