--- a/hm.tex
+++ b/hm.tex
@@ -186,7 +186,7 @@ The book \cite{book:knauf} will be a good extra reference for the course. In add
 
   Please don't be afraid to send me comments to improve the course or the text and to fix the many typos that will surely be in this first draft. They will be very appreciated.
 
-  I am extremely grateful to Nithesh Balasubramanian, Senan Bird, Riccardo Bonetto, Jose\-phine van Driel, Ramsay Duff, Mollie Jagoe-Brown, Jesse Mulder, Dijs de Neeling, Anouk Pelzer, Iisekki Rotko, Danique de Ruiter, Robbert Scholtens, Felix Semler, Albert \v{S}ilvans, Marit van Straaten and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
+  I am extremely grateful to Nithesh Balasubramanian, Senan Bird, Riccardo Bonetto, Jose\-phine van Driel, Ramsay Duff, Brian Elsinga, Mollie Jagoe-Brown, Jesse Mulder, Dijs de Neeling, Anouk Pelzer, Iisekki Rotko, Danique de Ruiter, Robbert Scholtens, Felix Semler, Albert \v{S}ilvans, Marit van Straaten and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
 
   Last but not least, I owe a huge debt of gratitude to \href{https://crojasmolina.com}{Constanza Rojas-Molina}, who kindly allowed me to use some of her beautiful artworks in these notes.
 
@@ -1956,7 +1956,7 @@ This principle, introduced by Hamilton in 1834, suggests that a mechanical syste
       \end{equation}
       is the rotation around the axis through the origin and parallel to $\vb*{N}
       = (X_{32}, X_{13}, X_{21})$ of angle $\delta\phi = s|\vb*{N}|$.
-      For a hint, see \cite[Chpater 26.D]{book:arnold}.
+      For a hint, see \cite[Chapter 26.D]{book:arnold}.
     \end{exercise}
 
     In view of Exercise~\ref{exe:rotations}, Noether theorem tells us that the conserved quantity for a single particle system would be
