--- a/hm.tex
+++ b/hm.tex
@@ -186,7 +186,7 @@ The book \cite{book:knauf} will be a good extra reference for the course. In add
 
   Please don't be afraid to send me comments to improve the course or the text and to fix the many typos that will surely be in this first draft. They will be very appreciated.
 
-  I am extremely grateful to Nithesh Balasubramanian, Senan Bird, Riccardo Bonetto, Jose\-phine van Driel, Ramsay Duff, Brian Elsinga, Mollie Jagoe-Brown, Jesse Mulder, Dijs de Neeling, Anouk Pelzer, Iisekki Rotko, Danique de Ruiter, Robbert Scholtens, Felix Semler, Albert \v{S}ilvans, Marit van Straaten and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
+  I am extremely grateful to Nithesh Balasubramanian, Senan Bird, Riccardo Bonetto, Jose\-phine van Driel, Ramsay Duff, Brian Elsinga, Mollie Jagoe-Brown, Jesse Mulder, Ruxandra Nastase, Dijs de Neeling, Anouk Pelzer, Iisekki Rotko, Danique de Ruiter, Robbert Scholtens, Felix Semler, Albert \v{S}ilvans, Marit van Straaten and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
 
   Last but not least, I owe a huge debt of gratitude to \href{https://crojasmolina.com}{Constanza Rojas-Molina}, who kindly allowed me to use some of her beautiful artworks in these notes.
 
@@ -2974,7 +2974,7 @@ This principle, introduced by Hamilton in 1834, suggests that a mechanical syste
     Given an $n$-dimensional vector space $V$ spanned by a basis $\{e_1, \ldots, e_n\}$, we can define its \emph{dual} space as the space $V^* = \{f : V \to \mathbb{R} \; \mbox{linear}\}$ of linear functions from $V$ to $\mathbb{R}$.
     As a basis for the dual space we can define the dual basis $\{e^1, \ldots, e^n\}$ as the linear maps such that $e^i(e_j) = \delta^i_j$. Since any linear function is determined by its action on a basis element, we can determine any $\sigma \in V^*$ by computing its coefficients $\sigma_i = \sigma(e_i)$. Then $\sigma = \sigma_i e^i$.
 
-    We have seen that tangent vectors at a point $q$ on a smooth manifold $P$ are elements of a $n$-dimensional vector space, the tangent space $T_x P$, and in coordinates they take the form $v^i \frac{\partial}{\partial x^i}$.
+    We have seen that tangent vectors at a point $x$ on a smooth manifold $P$ are elements of a $n$-dimensional vector space, the tangent space $T_x P$, and in coordinates they take the form $v^i \frac{\partial}{\partial x^i}$.
     We can then use the theory of the previous paragraph to define the dual space to $T_x P$, the \emph{cotangent space} $T^*_x P$.
     We call elements of the cotangent space at $x$, \emph{covectors} or one-forms at $x$.
 
